Error Mitigation/MagiCoder/Data/java_util_prefs/java_util_prefsOutputResult.txt
Sample: AbstractPreferences_2
----------------------------------------------------------------
output:
./Data/java_util_prefs/javaFiles/AbstractPreferences_2.java:5: error: constructor AbstractPreferences in class AbstractPreferences cannot be applied to given types;
        AbstractPreferences prefs = new AbstractPreferences() {
                                    ^
  required: AbstractPreferences,String
  found:    no arguments
  reason: actual and formal argument lists differ in length
./Data/java_util_prefs/javaFiles/AbstractPreferences_2.java:5: error: <anonymous AbstractPreferences_2$1> is not abstract and does not override abstract method flushSpi() in AbstractPreferences
        AbstractPreferences prefs = new AbstractPreferences() {
                                                              ^
./Data/java_util_prefs/javaFiles/AbstractPreferences_2.java:7: error: keys() in <anonymous AbstractPreferences_2$1> cannot override keys() in Preferences
            protected String[] keys() {
                               ^
  attempting to assign weaker access privileges; was public
./Data/java_util_prefs/javaFiles/AbstractPreferences_2.java:11: error: method does not override or implement a method from a supertype
            @Override
            ^
./Data/java_util_prefs/javaFiles/AbstractPreferences_2.java:16: error: method does not override or implement a method from a supertype
            @Override
            ^
./Data/java_util_prefs/javaFiles/AbstractPreferences_2.java:21: error: method does not override or implement a method from a supertype
            @Override
            ^
./Data/java_util_prefs/javaFiles/AbstractPreferences_2.java:26: error: method does not override or implement a method from a supertype
            @Override
            ^
7 errors


================================================================

Sample: AbstractPreferences_3
----------------------------------------------------------------
================================================================

Sample: AbstractPreferences_4
----------------------------------------------------------------
stdout:
value

================================================================

Sample: AbstractPreferences_5
----------------------------------------------------------------
output:
./Data/java_util_prefs/javaFiles/AbstractPreferences_5.java:10: error: exception BackingStoreException is never thrown in body of corresponding try statement
        } catch (BackingStoreException e) {
          ^
1 error


================================================================

Sample: PreferenceChangeEvent_2
----------------------------------------------------------------
output:
./Data/java_util_prefs/javaFiles/PreferenceChangeEvent_2.java:7: error: cannot find symbol
        prefs.addPreferenceChangeListener(new PreferenceChangeListener() {
                                              ^
  symbol:   class PreferenceChangeListener
  location: class PreferenceChangeEvent_2
1 error


================================================================

Sample: PreferenceChangeEvent_3
----------------------------------------------------------------
stdout:
Preference changed: key1
Preference changed: key2

================================================================

Sample: Preferences_1
----------------------------------------------------------------
stdout:
Username: john
Password: secret

================================================================

Sample: Preferences_2
----------------------------------------------------------------
stdout:
System Preference Node: /

================================================================

Sample: Preferences_3
----------------------------------------------------------------
output:
./Data/java_util_prefs/javaFiles/Preferences_3.java:9: error: unreported exception BackingStoreException; must be caught or declared to be thrown
        userPrefs.flush();
                       ^
1 error


================================================================

Sample: Preferences_4
----------------------------------------------------------------
================================================================

Sample: Preferences_5
----------------------------------------------------------------
stdout:
value

================================================================

